# CppAMP_CornellBoxRenderer

./: .gitignore  CMakeLists.txt  CornellBoxRenderer.sln  README.md
CornellBoxRenderer/: Camera.cpp  Camera.hpp  CameraInfo.cpp  CameraInfo.hpp  Color.hpp  Constant.hpp  CornellBoxRenderer.vcxproj  CornellBoxRenderer.vcxproj.filters  ImageResolution.cpp  ImageResolution.hpp  Intersection.cpp  Intersection.hpp  PPMhandler.cpp  PPMhandler.hpp  Radiance.cpp  Radiance.hpp  RandomGenerator.cpp  RandomGenerator.hpp  Ray.cpp  Ray.hpp  Render.cpp  Render.hpp  RenderingData.hpp  Scene.cpp  Scene.hpp  Screen.cpp  Screen.hpp  ScreenInfo.cpp  ScreenInfo.hpp  Sphere.cpp  Sphere.hpp  Vector.cpp  Vector.hpp  main.cpp
